--- a/Notus-Image-Watermarker/Notus-Image-Watermarker/Notus-Image-Watermarker.csproj
+++ b/Notus-Image-Watermarker/Notus-Image-Watermarker/Notus-Image-Watermarker.csproj
@@ -1,8 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Notus_Image_Watermarker</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+  </ItemGroup>
 
 </Project>
