--- a/Notus-Nft-Wallet/Notus-Nft-Wallet/Notus-Nft-Wallet.csproj
+++ b/Notus-Nft-Wallet/Notus-Nft-Wallet/Notus-Nft-Wallet.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -8,7 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Blazored.Modal" Version="6.0.1" />
     <PackageReference Include="Blazored.SessionStorage" Version="2.2.0" />
-    <PackageReference Include="Notus.Core" Version="3.0.56" />
+    <PackageReference Include="Notus.Core" Version="3.0.59" />
     <PackageReference Include="Notus.Web3" Version="3.0.27" />
   </ItemGroup>
 
